# datapains-whiskey-el

./: Makefile  README.md  pyproject.toml  run.py
.github/actions/lint-test-build-scan/: action.yaml
config/local/: example-config.ini
src/: process.py
src/models/: api_config.py  application_config.py  base_config.py  delta_client_config.py  sink_config.py
src/sink/: write.py
src/source/: extract.py
src/utils/: delta_client.py  parser.py
tools/docker/: Dockerfile
tools/k8s/local/: 01-config.yaml  02-deployment.yaml
tools/k8s/local/app/: 01-config.yaml  02-deployment.yaml  02-whiskey-extract-job.yaml  03-app.yaml
tools/k8s/local/base/: 00-namespace.yaml  01-sa.yaml
tools/k8s/local/storage/: 01-minio.yaml  02-minio-service.yaml  03-minio-client-job.yaml
